--- a/Vega/Vega/appsettings.json
+++ b/Vega/Vega/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=(localdb)\\MSSQLLocalDB ; database=vega ; Trusted_Connection = yes;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
