--- a/Vega/Vega/ClientApp/package.json
+++ b/Vega/Vega/ClientApp/package.json
@@ -24,10 +24,15 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@sentry/browser": "^5.15.4",
+    "@types/underscore": "^1.8.20",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
     "core-js": "^2.4.1",
+    "ng2-toasty": "^4.0.3",
+    "raven-js": "^3.27.2",
     "rxjs": "^5.5.6",
+    "underscore": "^1.10.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
