7. Filtering, Sorting and Pagination 8. Uploading Files

--- a/Vega/Vega/appsettings.json
+++ b/Vega/Vega/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Default": "server=(localdb)\\MSSQLLocalDB ; database=vega ; Trusted_Connection = yes;"
   },
+  "PhotoSettings": {
+    "MaxBytes": 10485760,
+    "AcceptedFileTypes": [ ".jpg", ".jpeg", ".png" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
