--- a/Vega/Vega/ClientApp/package.json
+++ b/Vega/Vega/ClientApp/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -27,11 +28,14 @@
     "@sentry/browser": "^5.15.4",
     "@types/underscore": "^1.8.20",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "ng2-toasty": "^4.0.3",
     "raven-js": "^3.27.2",
     "rxjs": "^5.5.6",
+    "save": "^2.4.0",
     "underscore": "^1.10.2",
     "zone.js": "^0.8.19"
   },
