--- a/Vega/Vega/ClientApp/package.json
+++ b/Vega/Vega/ClientApp/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --extract-css",
-    "build": "ng build --extract-css",
+    "start": "ng serve --port 3000",
+    "build": "ng build",
     "build:ssr": "npm run build -- --app=ssr --output-hashing=media",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,17 +24,22 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@auth0/auth0-spa-js": "^1.6.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@sentry/browser": "^5.15.4",
     "@types/underscore": "^1.8.20",
+    "angular2-jwt": "^0.2.2",
     "aspnet-prerendering": "^3.0.1",
+    "auth0-lock": "^10.15.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ng2-toasty": "^4.0.3",
     "raven-js": "^3.27.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.5.5",
     "save": "^2.4.0",
     "underscore": "^1.10.2",
     "zone.js": "^0.8.19"
